--- a/css/cssCadastrosOutros/style480.css
+++ b/css/cssCadastrosOutros/style480.css
@@ -228,3 +228,29 @@ h1{
     border: 2px solid #B7D6EC;
     margin-bottom: 10px;
 }
+
+
+#posiciona{
+    width:600px;
+  display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  padding:10px;
+    
+}
+
+p#puxar1, p#puxar2, p#puxar3{
+    width:60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left:-70px;
+
+}
+input#IdCheck0, input#IdChecke0, input#IdCheckee0
+{
+    width:200px;
+
+}
