--- a/css/lista_alunos_sala/lista_alunos_sala_1366.css
+++ b/css/lista_alunos_sala/lista_alunos_sala_1366.css
@@ -77,89 +77,8 @@
      width: calc(100% - 280px);
   }
 
-  /*HORARIO*/
-  
-  /*Display e hidden*/
-.semana{
-    display:none
-}
 
-#semanaSegunda{
-    display: block;
-    
-}
-.botaoSemana{
-    color: #169BD5;
-    display: inline-block;
-}
-.horario input[type="radio"]{
-    display: none;
-}
 
-/*Cabeçalho*/
-.header_profile{
-  display:none;
-}
-
-/*Estilizando a passagem do horário*/
-.horario{
-    margin-top: 5%;
-    width: 1100px;
-    float: left;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.labelBotao{
-    display:inline-flex;
-    padding: 6px 12px;
-    font-size: 26px;
-    color: #169bd5;            
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-}
-
-.horario input[type="radio"]:checked + .labelBotao{
-    border-bottom: 3px solid #169bd5; 
-    font-weight: bolder;
-}
-/*Estilizando o horário*/
-.semana{
-    text-align: center;
-    overflow-y:auto;
-    
-}
-.topico_horario{ 
-  display:flex;
-  width: 800px;
-  margin-top: 3%;
-  color: #fff;
-  background: linear-gradient(90deg, rgba(0,204,204,1) 0%, rgba(22,155,213,1) 100%); 
-  text-align: center;
-  height: 150px; 
-  align-items: center;
-  justify-content: space-around
-}
-
-.hora, .info_horario{
-    display: inline-block;
-    align-content: center;
-    align-items: center;
-    margin: 3%;
-}
-.info_horario{
-}
-
-.topico_horario p{
-    font-size: 30px;
-    font-weight: bolder;
-}
-.topico_horario span{
-    font-weight: lighter;
-}
   /********* INICIO CABECALHO****************/
   
   #cabecalho{
@@ -173,144 +92,51 @@
     margin-left:20px;
     margin-top: 20px;  
   }
-   #sala{
+  #sala{
     color:white;
     font-family: Roboto;
-    font-size: 1.2em;
+    font-size: 0.925em;
     font-weight: bold;
     text-align:center;
-    padding:15px;
+    padding:1px;
     background-color:#00cccc;
-    width:90px;
-    height:90px;
+    width:100px;
+    height:100px;
     border-radius: 50%;
-    position:absolute;
+   position:absolute;
     left:50%;
     margin-left:-50px;
-  }
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  
+  
+    }
   
   #infoCurso{
    text-align:center;
-   margin-top:95px;
+   margin-top:105px;
    color:white;
    font-size:1.2em;
 
   }
   
-  
- 
-  
-  /* ********** NAVEGAÇÃO DE ABAS ***********/
-  button:focus,
-  input:focus,
-  textarea:focus,
-  select:focus {
-    outline: none; }
-  
-  .tabs {
-    display: block;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -moz-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin: 0;
-    overflow: hidden;
-   }
-   #nometab{
-     color:#003366;
-   }
- 
-  
-     .tabs [class^="tab"] .labelTab,
-    .tabs [class*=" tab"] .labelTab {
-      color: #003366;
-      cursor: pointer;
-      display: block;
-      font-size: 1.1em;
-      font-weight: bold;
-      line-height: 1em;
-      padding: 1rem 0;
-      text-align: center;
-      font-family:roboto;
-  }
-  
-    .tabs [class^="tab"] [type="radio"]:not(.botaoSemana) ,
-    .tabs [class*=" tab"] [type="radio"]:not(.botaoSemana) {
-      border-bottom: 1px solid rgba(239, 237, 239, 0.5);
-      cursor: pointer;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      appearance: none;
-      display: block;
-      width: 100%;
-      -webkit-transition: all 0.5s ease-in-out;
-      -moz-transition: all 0.5s ease-in-out;
-      -o-transition: all 0.5s ease-in-out;
-      transition: all 0.5s ease-in-out;
-   }
-   
-      .tabs [class^="tab"] [type="radio"]:hover, .tabs [class^="tab"] [type="radio"]:focus,
-      .tabs [class*=" tab"] [type="radio"]:hover,
-      .tabs [class*=" tab"] [type="radio"]:focus {
-        border-bottom: 3px solid #003366; 
-      
-  }
-  
-      .tabs [class^="tab"] [type="radio"]:checked,
-      .tabs [class*=" tab"] [type="radio"]:checked {
-        border-bottom: 3px solid #003366; 
-      }
-  
-      .tabs [class^="tab"] [type="radio"]:checked + div,
-      .tabs [class*=" tab"] [type="radio"]:checked + div {
-        opacity: 1; 
-      }
-  
-  
-      .tabs [class^="tab"] [type="radio"] + div,
-      .tabs [class*=" tab"] [type="radio"] + div {
-        display: block;
-        opacity: 0;
-        padding: 2rem 0;
-        width: 90%;
-        -webkit-transition: all 0.5s ease-in-out;
-        -moz-transition: all 0.5s ease-in-out;
-        -o-transition: all 0.5s ease-in-out;
-        transition: all 0.5s ease-in-out; 
-      }
-  
-    .tabs .tab-2 {
-      width: 50%; 
-      
-  }
-  
-      .tabs .tab-2 [type="radio"] + div {
-        width: 200%;
-        margin-left: 200%;
-       }
-  
-      .tabs .tab-2 [type="radio"]:checked + div {
-        margin-left: 0; 
-      }
-      .tabs .tab-2:last-child [type="radio"] + div {
-        margin-left: 100%; 
-      }
-      .tabs .tab-2:last-child [type="radio"]:checked + div {
-        margin-left: -100%; 
-      }
-  
-  
       /*************** LISTA DE ALUNOS *****************/
-  
+      span#numAluno {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 500px;
+        text-align:left;
+        
+
+         }
       #dadosAluno{
         display: flex;
-      flex-direction: row;
-   justify-content: space-evenly;
-    align-items: center;
-    border-bottom:1px solid #ccc;
-    padding:10px;
+              flex-direction: row-reverse;
+           justify-content: space-between;
+            align-items: center;
+            border-bottom:1px solid #ccc;
+            padding:20px 120px;
       }
   
       #imgAluno{
@@ -328,3 +154,29 @@
       }
 
 
+#linkAdd{
+
+  width:auto;
+  margin-left:60px;
+  margin-right:40%;
+  height: 50px;
+  font-size: 18px;
+  background: rgb(1, 39, 77);
+  font-weight: bold;
+  color: rgb(255, 255, 255)!important;
+  border: 0 none;
+  cursor: pointer;
+  padding-top: 15px;
+  padding-left: 7px;
+  padding-right: 7px;
+  padding-bottom:15px;
+  margin-top:15px;
+  border-radius: 12px;
+  position: absolute;
+  left:50%;
+  margin-left:-70px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+   
+}
