--- a/css/lista_alunos_sala/lista_alunos_sala_480.css
+++ b/css/lista_alunos_sala/lista_alunos_sala_480.css
@@ -152,8 +152,7 @@
       #linkAdd{
 
         width:200px;
-        margin-left:60px;
-        margin-right:40%;
+        margin:auto;
         height: 50px;
         font-size: 18px;
         background: rgb(1, 39, 77);
@@ -167,7 +166,6 @@
         padding-bottom:15px;
         margin-top:15px;
         border-radius: 12px;
-        position: absolute;
         display:flex;
         align-items: center;
         justify-content: center;
