--- a/css/lista_alunos_sala/lista_alunos_sala_768.css
+++ b/css/lista_alunos_sala/lista_alunos_sala_768.css
@@ -146,8 +146,7 @@
       #linkAdd{
 
         width:200px;
-        margin-left:60px;
-        margin-right:40%;
+        margin:auto;
         height: 50px;
         font-size: 18px;
         background: rgb(1, 39, 77);
@@ -161,7 +160,6 @@
         padding-bottom:15px;
         margin-top:15px;
         border-radius: 12px;
-        position: absolute;
         left:40%;
         margin-left:-45px;
         display:flex;
