--- a/css/configuracoes/style768.css
+++ b/css/configuracoes/style768.css
@@ -32,6 +32,15 @@
   overflow-y: scroll;
 }
 
+.menu ul {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  height: 100%;
+  margin-top: 90px;
+}
+
 hr {
   width: 75vw;
   color: #c9c9c9;
@@ -65,282 +74,210 @@ hr {
 
 
 main {
-  width: 100vw;
-  min-height: 100vh;
-  padding: 80px 20px 0;
-  background: #F7FDFD; /*ou FAFEFE*/
-}
-
-.greetings {
-  width: 100%;
+  padding: 70px 0 0;
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
-.profile-photo {
-  width: 100px;
-  height: 100px;
-  border-radius: 54px;
-  background-color: rgba(0, 204, 204, .5);
-  flex-shrink: 0;
+
+::-webkit-scrollbar{
+  background-color: rgba(255, 255, 255, 0);
+  width: 8px;
+  height: 8px;
+}
+
+:hover::-webkit-scrollbar-track {
+    background-color: #ebfaff;
+    transition: 2s linear;
+}
+
+:hover::-webkit-scrollbar-thumb {
+    background-color: #002c58;
+    height: 50%;
+}
+
+:active::-webkit-scrollbar-thumb {
+    background-color: #012;
+}
+
+form {
+  max-width: 700px;
+  margin: 30px 0 90px;
+  padding-top: 30px;
+  border-top: solid #d2d2d2 1px;
+  display: flex;
+  flex-flow: wrap;
+  color: #252525;
+  font-family: Roboto;
+}
+
+h1 {width: 700px;}
+
+form .conta-edit {
+
+}
+
+form .foto-edit {
+  margin-left: 90px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+/*.foto-edit .foto-perfil {
+  width: 150px;
+  height: 150px;
   position: relative;
-  margin: 0 15px;
+  border-radius: 75px;
+  background: #d2d2d2;
+  margin: 10px;
+}
+/*
+.foto-perfil label {display: none;
+transition: 4s;
+transition-property: all;
+transition-timing-function: ease;
+transition-delay: 0s;}
+*/
+.foto-perfil label {
+  display: block;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  bottom: -105px;
+  right: -105px;
+  border: none;
+  border-radius: 30px;
+  font-size: 1.2em;
+  color: #fff;
+  background-color: rgba(0, 17, 34, 0.8);
+}
+*/
+form .confirmar {width: 100%}
+
+.grupo-form, .foto-edit {
+  max-width: 500px;
+  min-height: 100px;
+  padding: 15px 0;
+}
+
+form label{
+  font-weight: bolder;
+  font-size: 1em;
+}
+
+.grupo-form input {
+  width: 350px;
+  height: 35px;
+  border-radius: 3px;
+  background: #fbfbfb;
+  border: solid 1px #d2d2d2;
+  padding: 0 7px;
+  margin: 5px 0;
+  font-weight: bold;
+}
+
+.grupo-form input:focus {
+  background: white;
+  transition: .4s;
+  transition-property: all;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+}
+
+.nota-input {
+  max-width: 360px;
+  padding: 5px 0;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+
+.btn-conf{
+  border-radius: 5px;
+  border: none;
+  background: #012;
+  color: #fff;
+  font-weight: bolder;
+}
+
+.btn-conf:hover {background-color: #042240}
+.btn-conf:active {background-color: #05396d}
+
+#block, #conf-senha {display: none}
+
+.block {
+  display: flex!important;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  background-color: rgba(88, 88, 88, 0.25);
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  z-index: 9;
+}
+
+.conf-senha {
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  top: 0 ;
+  z-index: 10;
+  background-color: #fff;
+  border-radius: 10px;
+  display: flex!important;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: 250px;
+  margin: auto;
+  padding: 30px;
+}
+
+.conf-senha input {width: 100%}
+
+.conf-senha .btn-pronto {
+  background-color: #0cc;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+.btn-pronto:hover {background-color: #0ac}
+.btn-pronto:focus {background-color: #0ac!important}
+.btn-pronto:active {background-color: #0085cc!important}
+
+.conf-senha input, .conf-senha label {margin: 10px 0;}
+
+.form {
+  flex-direction: column;
+}
+
+.form label {margin-bottom: 15px}
+
+h1 {width: auto;}
+
+.foto-edit {
+  order: 0;
+  margin: 0!important;
+  padding: 0;
+  height: 220px;
+}
+
+.conta-edit {
   order: 1;
 }
 
-.profile-photo a {
-    background: #f33;
-    min-width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    padding: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-weight: bold;
-    position: absolute;
-    right: 5px;
-    top: 5px;
-}
-
-.greetings h1 {
-  font-size: 1.75;
-  font-weight: bold;
-  color: #036;
-  width: 190px;
+.confirmar {
   order: 2;
-}
-
-.block {
   display: flex;
-  flex-flow: column;
-  align-items: center;
 }
 
-.scroll-box{
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-
-}
-
-.schedule {
-  height: 200px;
-  color: #f2f2f2;
-  margin: 10px;
-}
-
-h2 {
-  font-size: 1.2em;
-  font-weight: bold;
-  color: #036;
-  text-align: left;
-  margin: 0 0 10px 0;
-}
-
-.um h2{
-  margin: 30px 0 10px 0;
-}
-
-.schedule .item {
-  max-width: 330px;
-  min-height: calc(75px + 1vh);
-  background-color: #c9c9c9;
-  margin-bottom: 5px;
-  display: flex;
-  flex-flow: row;
-  border-radius: 20px
-  }
-
-.schedule .select-item {
-  background-color: #0cc;
-  color: white;
-}
-
-.schedule .select-item i{
-  width: 38px;
-  height: 38px;
-  font-size: 1.1em;
-  border-radius: 19px;
-  color: #fff;
-  background-color: #036;
-  border: 4px solid #0cc;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  right: 5px;
-  top: 5px
-}
-
-.schedule .item .hour {
-  width: 100px;
-  font-size: 2.1em;
-  font-weight: bold;
-  border-right: solid 3px white;
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.schedule .item div {
-  padding: 10px;
-  display: flex;
-  flex-wrap: wrap-reverse;
-  align-items: center;
-  position: relative;
-}
-
-.schedule .item div span{
-  font-size: 1.3em;
-  padding: 0 10px;
-  font-weight: normal;
-}
-
-.schedule .item div span:nth-child(3) {
-  font-weight: bold;
-}
-
-.standard-btn {
+.btn-conf{
+  margin-top: 10px;
+  height: 40px;
   width: 220px;
-  height: 35px;
-  border-radius: 20px;
-  margin-top: 15px;
-  font-size: 0.9em;
-  font-weight: normal;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  background-color: #0cc;
 }
-
-
-
-
-
-
-.calendario {
-  max-width: 400px;
-  height: 400px;
-  margin: 40px 0;
-  padding: 20px;
-  border-radius: 20px;
-  color: #434343;
-  background-color: rgba(0, 105, 205, .2);
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.calendario h2 {
-  margin: 0 0 15px 0;
-}
-
-.calendario table {
-  width: 100%;
-}
-
-.calendario .mes_title td{
-  font-size: 1em;
-  font-weight: normal;
-  padding-bottom: 20px;
-}
-
-.calendario .ano td{
-  font-size: .9em;
-  font-weight: normal;
-  display: table-row;
-}
-
-.calendario .mes tr{
-  font-size: 0.9em;
-  font-weight: normal;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.calendario .mes td {
-  font-weight: normal;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 33px;
-  height: 33px
-}
-
-.calendario .mes .select-date {
-  background-color: #0cc;
-  border-radius: 20px
-}
-
-
-
-
-
-.locked-background {
-  display: flex;
-  justify-content: center;
-}
-
-.notif {
-  width: 320px;
-  height: 400px;
-  padding: 20px;
-  position: relative;
-  background-color: #D5E7F4;
-  border-radius: 20px;
-}
-
-.notif .scroll-box {
-  width: 100%;
-  height: 100%;
-}
-
-.notif-item {
-  width: 100%;
-  height: 70px;
-  border-radius: 20px;
-  background-color: #B7D6EC;
-  margin-bottom: 10px;
-}
-
-.close i{
-  display: none;
-}
-
-@media (min-width: 690px) {
-
-  main{
-    display: inline-grid;
-    grid-template-columns: 25% 25% 20% 20%;
-    grid-template-rows: 100px 340px 250px 200px;
-    grid-column-gap: 3.3%;
-    grid-row-gap: 25px;
-  }
-
-  .greetings {
-    grid-column: 1/5;
-    grid-row: 1/1;
-  }
-
-  .um {
-    grid-column: 1/3;
-    grid-row: 2/3;
-  }
-
-  .dois {
-    grid-column: 3/5;
-    grid-row: 2/4;
-  }
-
-  .locked-background {
-    grid-column: 1/3;
-    grid-row: 3/4;
-}
- }
