--- a/css/perfil/perfil1024.css
+++ b/css/perfil/perfil1024.css
@@ -33,6 +33,20 @@
   background: #051523;
 }
 
+.menu-buttons {
+  margin-top: calc(60px + 5vh);
+  flex-grow: 2;
+  align-items: flex-end!important;
+  position: relative;
+  left: 25px;
+  width: 280px;
+}
+
+.menu-buttons li{padding: 10px; width: 100%}
+
+.menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
+
+
 hr {display: none; border: none;}
 
 .menu-buttons {
