--- a/css/perfil/perfil1366.css
+++ b/css/perfil/perfil1366.css
@@ -40,8 +40,14 @@
     flex-grow: 2;
     align-items: flex-end!important;
     position: relative;
-    right: -57px
+    left: 25px;
+    width: 280px;
   }
+
+  .menu-buttons li{padding: 10px; width: 100%}
+  
+  .menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
+  
   
   .menu-buttons li a{
     font-size: 1em;
