--- a/css/lista_alunos_sala/lista_alunos_sala_480.css
+++ b/css/lista_alunos_sala/lista_alunos_sala_480.css
@@ -131,6 +131,7 @@
         border-bottom: 1px solid #ccc;
         padding: 10px 10px;
         margin-top: 10px;
+        color:black;
    
       }
       #imgAluno{
