--- a/css/lista_alunos_sala/lista_alunos_sala_1366.css
+++ b/css/lista_alunos_sala/lista_alunos_sala_1366.css
@@ -138,6 +138,7 @@
         align-items: center;
         border-bottom:1px solid #ccc;
         padding:20px 120px;
+        color:black;
       }
   
       #imgAluno{
@@ -158,7 +159,7 @@
 #conteudotab1 {
   display: flex;
     justify-content: center;
-    align-items:
+    
 }
 
 
