--- a/css/cssOperacaoCurso/style768.css
+++ b/css/cssOperacaoCurso/style768.css
@@ -158,6 +158,7 @@ a.buttonNext {
 }
 
 h1{
+  margin-top:20px;
   color:#036;
   margin-bottom:15px;
   text-align: center;
@@ -187,19 +188,20 @@ h1{
   border-radius: 12px;
   }
   
-
-
-.setinha{
-  /*padding-top: 70px;*/
-  height: 90px;
-  padding: 80px 55px 0;
-
-}
-#seta{
- text-align: left;
- width:40px;
- }
-
+  .setinha{
+    position: fixed;
+    left: 4px;
+    top: -15px;
+    height: 90px;
+    padding: 80px 55px 0;
+  
+  }
+  #seta{
+   text-align: left;
+   width:50px;
+  
+   
+  }
 table{
   width:100%;
   table-layout: fixed;
@@ -230,3 +232,32 @@ color:black;
 font-weight: bold;
 text-decoration: underline;
 }
+
+
+/*
+  img.perfil-foto{
+
+                width: 176px;
+                height:176px;
+                border-radius: 100%;
+                border: 3px solid;
+                border-color: #666;
+                z-index: 1;
+            }
+
+            input.VAISEFUDE {
+                text-align: center;
+                width: 240px;
+                height: 50px;
+                font-size: 26px;
+                background: #00CCCC;
+                font-weight: bold;
+                color: white;
+                border: 0 none;
+                border-radius: 1px;
+                cursor: pointer;
+                padding: 10px 5px;
+                margin: 10px 5px;
+                text-decoration: none;
+                border-radius: 15px;
+            }
