arrumei os troços da imagem n ficar redonda
na vdd era só por um border radius mas eh noiz

--- a/css/chamada-ocorrencia/chamada_ocorrencia1024.css
+++ b/css/chamada-ocorrencia/chamada_ocorrencia1024.css
@@ -355,6 +355,7 @@ select:focus {
           #imgAluno{
             width:95px;
             height: 95px;
+            border-radius: 50px;
           }
       
           p{
