--- a/css/chamada-ocorrencia/chamada_ocorrencia1366.css
+++ b/css/chamada-ocorrencia/chamada_ocorrencia1366.css
@@ -353,6 +353,7 @@ main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
               #imgAluno{
                 width:95px;
                 height: 95px;
+                border-radius: 50px;
               }
           
               p{
