--- a/css/chamada-ocorrencia/chamada_ocorrencia768.css
+++ b/css/chamada-ocorrencia/chamada_ocorrencia768.css
@@ -345,6 +345,7 @@ select:focus {
           #imgAluno{
             width:95px;
             height: 95px;
+            border-radius: 50px;
           }
       
           p{
