--- a/css/cssPrimeiroAcesso/style768.css
+++ b/css/cssPrimeiroAcesso/style768.css
@@ -81,8 +81,10 @@ p.vsf{
     margin-bottom: 10px;
     height: 30px;
     width: 700px;
-    border:none;
-    border-bottom: 3px solid #666;
+   border:none;
+    border-bottom: 2px solid #000;
+    border-radius: 5px;
+    background:none;
 
 }
 .recebeDados{
@@ -91,6 +93,11 @@ p.vsf{
     margin: 15px;
 }
 
+#line{
+    height:1px;
+    border: 2px solid #B7D6EC;
+    margin-bottom: 10px;
+}
 
 #plus{
     font-size: 30px;
@@ -113,6 +120,7 @@ p.vsf{
 .puto {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
 }
 
