--- a/css/perfil/perfil1024.css
+++ b/css/perfil/perfil1024.css
@@ -1,4 +1,4 @@
-.header {
+.header { background-color: transparent;
   width: calc(100% - 280px);
   height: 7vh;
 }
@@ -94,8 +94,8 @@ main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
 .banner {
   
   width: 100%;
-  height: 150px;
-  padding-top:60px;
+  height: 150px;/*
+  padding-top:60px;*/
 
   display: flex;
   flex-flow: column;
@@ -146,15 +146,43 @@ h3{
 }
 
 
+
+  
+  
 #botao{
-
+  width: 250px;
+  height: 100px;
+  padding: 10px;
   background-color: rgb(0, 205, 205);
-  padding:20px 50px 20px;
-  border-radius: 12px;
-  display:inline-block;
-  margin-bottom:20px;
-  margin-left:50px;
+  background-size:  cover;
+  background-repeat: no-repeat;
+  border-radius: 9px;
+  margin: 10px 15px 15px 15px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+  font-size: 1.5em;
+  font-weight: bolder;
+  box-shadow: 0px -2px 17px 5px rgba(0,43,56,.1), 
+              inset 0px -60px 20px 0px #00000029;
+  }
 
-}
+  .botaoFuncionalidades {
+    max-width: 1800px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .bot0 {background-image: url(../../imagens/lancarNotas.png);}
+  
+  .bot1 {background-image: url(../../imagens/ChamadaOcorr.png);}
+  
+  .bot2 {background-image: url(../../imagens/PesquisaAlunos.png);}
+  
+  .bot3 {background-image: url(../../imagens/Configuracoes.png);}
+  
+  .bot4 {background-image: url(../../imagens/Sair.png);}
 
