--- a/css/perfil/perfil1366.css
+++ b/css/perfil/perfil1366.css
@@ -1,4 +1,4 @@
-.header {
+.header { background-color: transparent;
     width: calc(100% - 280px);
     height: 7vh;
   }
@@ -86,8 +86,8 @@
   .banner {
     
     width: 100%;
-    height: 150px;
-    padding-top:60px;
+    height: 150px;/*
+    padding-top:60px;*/
 
     display: flex;
     flex-flow: column;
@@ -139,14 +139,73 @@
   
   
   #botao{
-  
     background-color: rgb(0, 205, 205);
-    padding:20px 50px 20px;
-    border-radius: 12px;
-    display:inline-block;
-    margin-bottom:20px;
-    margin-left:50px;
+    background-size:  cover;
+    background-repeat: no-repeat;
+    border-radius: 9px;
+    margin: 20px 30px 30px 30px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-  
-  }
+    font-size: 1.5em;
+    font-weight: bolder;
+    box-shadow: 0px -2px 17px 5px rgba(0,43,56,.1), 
+                inset 0px -60px 20px 0px #00000029;
+    }
 
+    .botaoFuncionalidades {
+      max-width: 1800px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .bot0 {
+      background-image: url(../../imagens/lancarNotas.png);
+      width: 300px;
+      height: 130px;
+    }
+    
+    .bot1 {
+      background-image: url(../../imagens/ChamadaOcorr.png);
+      width: 300px;
+      height: 130px;
+    }
+    
+    .bot2 {
+      background-image: url(../../imagens/PesquisaAlunos.png);
+      width: 300px;
+      height: 130px;
+    }
+    
+    .bot3 {
+      background-image: url(../../imagens/Configuracoes.png);
+      width: 300px;
+      height: 130px;
+    }
+    
+    .bot4 {
+      background-image: url(../../imagens/Sair.png);
+      width: 300px;
+      height: 130px;
+    }
+    
+    .bot10 {
+      background-image: url(../../imagens/Cursos.png);
+      width: 300px;
+      height: 130px;
+    }
+    
+    .bot11 {
+      background-image: url(../../imagens/Disciplinas.png);
+      width: 300px;
+      height: 130px;
+    }
+    
+    .bot12 {
+      background-image: url(../../imagens/PesquisaAlunos.png);
+      width: 300px;
+      height: 130px;
+    }
