--- a/css/landingPage/style1366.css
+++ b/css/landingPage/style1366.css
@@ -151,7 +151,7 @@ main {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   text-align: center;
 }
 
