--- a/css/perfil/perfil1024.css
+++ b/css/perfil/perfil1024.css
@@ -92,7 +92,7 @@ main {background-color: #f1f1f1; width: 100vw; height: 100vh; }
 /**********/
 
 .banner {
-  
+
   width: 100%;
   height: 150px;/*
   padding-top:60px;*/
@@ -120,7 +120,7 @@ h1{
 h3{
     font-style: italic;
     font-size:0.8em;
-    
+
 }
 
 .profile-photo {
@@ -134,7 +134,7 @@ h3{
 
 #conteudo{
   /*  background-color:red;*/
-  
+
     width:100%;
     height:auto;
     display: flex;
@@ -147,8 +147,8 @@ h3{
 
 
 
-  
-  
+
+
 #botao{
   width: 250px;
   height: 100px;
@@ -164,7 +164,7 @@ h3{
   text-align: center;
   font-size: 1.5em;
   font-weight: bolder;
-  box-shadow: 0px -2px 17px 5px rgba(0,43,56,.1), 
+  box-shadow: 0px -2px 17px 5px rgba(0,43,56,.1),
               inset 0px -60px 20px 0px #00000029;
   }
 
@@ -177,12 +177,23 @@ h3{
   }
 
   .bot0 {background-image: url(../../imagens/lancarNotas.png);}
-  
+
   .bot1 {background-image: url(../../imagens/ChamadaOcorr.png);}
-  
+
   .bot2 {background-image: url(../../imagens/PesquisaAlunos.png);}
-  
+
   .bot3 {background-image: url(../../imagens/Configuracoes.png);}
-  
+
   .bot4 {background-image: url(../../imagens/Sair.png);}
 
+  .bot10 {background-image: url(../../imagens/Cursos.png);}
+
+  .bot11 {background-image: url(../../imagens/Disciplinas.png);}
+
+  .bot12 {background-image: url(../../imagens/PesquisaAlunos.png);}
+
+  .bot20 {background-image: url(../../imagens/Cursos.png);}
+
+  .bot21 {background-image: url(../../imagens/PesquisaAlunos.png);}
+
+  .bot22 {background-image: url(../../imagens/Disciplinas.png);}
