--- a/css/perfil/perfil480.css
+++ b/css/perfil/perfil480.css
@@ -3,20 +3,20 @@
 	height: 60px;
    margin-top:-60px;
   }
-  
+
   .logo {
 	width: 2.5em;
 	height: 2.5em;
 	margin: 0 15px;
   }
-  
+
   .hamburger{
 	width: 60px;
 	height: 100%;
   }
-  
+
   .hamburger svg{width: 1.2em;}
-  
+
   .fullnav {
 	bottom: 0%;
 	top: 0%;
@@ -26,49 +26,49 @@
 	background: #051523;
 	color:white;
   }
-  
+
   .menu {
 	width: 100vw;
 	overflow-y: scroll;
 	justify-content: space-around;
 	color:white;
   }
-  
+
   hr {
 	width: 75vw;
 	color: #c9c9c9;
 	margin: 15px 0;
   }
-  
+
   .menu-buttons {min-height: 50vh; color:white}
-  
-  
+
+
   .menu-buttons li {font-size: 1.5em}
-  
+
   .menu-buttons i {
 	font-size: .8em;
 	margin-right: 4px
   }
-  
+
   .title, .subtitle {font-size: 1.2em;}
-  
+
   .title {font-size: 1.3em}
-  
+
   .profile-photo-menu {
 	width: 33%;
 	padding-top: 33%;
 	border-radius: 70px;
 	margin: 60px 0 10px;
   }
-  
+
   .active-menu .fullnav {right: 0;}
-  
+
 
 
   /**********/
 
   .banner {
-  
+
   width: 100%;
   height: 250px;
   margin-top:60px;
@@ -129,7 +129,7 @@ h3{
   text-align: center;
   font-size: 1.4em;
   font-weight: bolder;
-  box-shadow: 0px -2px 17px 5px rgba(0,43,56,.1), 
+  box-shadow: 0px -2px 17px 5px rgba(0,43,56,.1),
               inset 0px -60px 20px 0px #00000029;
   }
 
@@ -142,12 +142,23 @@ h3{
   }
 
   .bot0 {background-image: url(../../imagens/lancarNotas.png);}
-  
+
   .bot1 {background-image: url(../../imagens/ChamadaOcorr.png);}
-  
+
   .bot2 {background-image: url(../../imagens/PesquisaAlunos.png);}
-  
+
   .bot3 {background-image: url(../../imagens/Configuracoes.png);}
-  
+
   .bot4 {background-image: url(../../imagens/Sair.png);}
 
+  .bot10 {background-image: url(../../imagens/Cursos.png);}
+
+  .bot11 {background-image: url(../../imagens/Disciplinas.png);}
+
+  .bot12 {background-image: url(../../imagens/PesquisaAlunos.png);}
+
+  .bot20 {background-image: url(../../imagens/Cursos.png);}
+
+  .bot21 {background-image: url(../../imagens/PesquisaAlunos.png);}
+
+  .bot22 {background-image: url(../../imagens/Disciplinas.png);}
