--- a/css/perfil/perfil768.css
+++ b/css/perfil/perfil768.css
@@ -3,22 +3,22 @@
     height: 70px;
    margin-top:-70px;
   }
-  
+
   .logo {
     width: 2.6em;
     height: 2.6em;
     margin-left: 15px;
   }
-  
+
   .hamburger{
     width: 70px;
     height: 100%;
   }
-  
+
   .hamburger svg{
     width: 1.2em;
   }
-  
+
   .fullnav {
     bottom: 0%;
     top: 0%;
@@ -27,45 +27,45 @@
     right: -100vw;
     background: #051523;
   }
-  
+
   .menu {
     width: 100vw;
     overflow-y: scroll;
   }
-  
+
   hr {
     width: 75vw;
     color: #c9c9c9;
     margin: 30px 0;
   }
-  
+
   .menu-buttons {min-height: 350px;}
-  
+
   .menu-buttons li {font-size: 1.6em}
-  
+
   .menu-buttons i {
     font-size: .9em;
     margin-right: 4px
   }
-  
+
   .title, .subtitle {font-size: 1.3em;}
-  
+
   .title {font-size: 1.4em}
-  
+
   .profile-photo-menu {
     width: 25%;
     padding-top: 25%;
     border-radius: 160px;
     margin: 70px 0 20px;
   }
-  
+
   .active-menu .fullnav {right: 0;}
-  
-  
+
+
   /**********/
 
   .banner {
-    
+
     width: 100%;
     height: 250px;
   margin-top:70px;
@@ -76,12 +76,12 @@
     background-color: #003366;
     color: white
   }
-  
+
   h2, h1 {
     font-size: 1.4em;
     margin: 7px;
   }
-  
+
   h2 {
     font-weight: bold;
   }
@@ -89,7 +89,7 @@
       font-style: italic;
       font-size:0.8em;
   }
-  
+
   .profile-photo {
     width: 120px;
     height: 120px;
@@ -107,7 +107,7 @@
       align-items: center;
       -webkit-justify-content: center;
       justify-content: center;
-   
+
   }
 
   #botao{
@@ -125,10 +125,10 @@
     text-align: center;
     font-size: 1.5em;
     font-weight: bolder;
-    box-shadow: 0px -2px 17px 5px rgba(0,43,56,.1), 
+    box-shadow: 0px -2px 17px 5px rgba(0,43,56,.1),
                 inset 0px -60px 20px 0px #00000029;
     }
-  
+
     .botaoFuncionalidades {
       max-width: 1800px;
       display: flex;
@@ -136,15 +136,25 @@
       flex-wrap: wrap;
       justify-content: center;
     }
-  
+
     .bot0 {background-image: url(../../imagens/lancarNotas.png);}
-    
+
     .bot1 {background-image: url(../../imagens/ChamadaOcorr.png);}
-    
+
     .bot2 {background-image: url(../../imagens/PesquisaAlunos.png);}
-    
+
     .bot3 {background-image: url(../../imagens/Configuracoes.png);}
-    
+
     .bot4 {background-image: url(../../imagens/Sair.png);}
-  
-  
+
+    .bot10 {background-image: url(../../imagens/Cursos.png);}
+
+    .bot11 {background-image: url(../../imagens/Disciplinas.png);}
+
+    .bot12 {background-image: url(../../imagens/PesquisaAlunos.png);}
+
+    .bot20 {background-image: url(../../imagens/Cursos.png);}
+
+    .bot21 {background-image: url(../../imagens/PesquisaAlunos.png);}
+
+    .bot22 {background-image: url(../../imagens/Disciplinas.png);}
