--- a/css/cssCadastroMaster/style480.css
+++ b/css/cssCadastroMaster/style480.css
@@ -147,3 +147,13 @@ a.buttonNext {
     top: -50px;
     right: -50px;
 }
+
+.confirma{
+    font-weight: 600;
+    color: #003366
+}
+
+.endUnid{
+    width: 80%;
+    margin-top: 15%;
+}
