--- a/css/cssOperacaoCurso/style768.css
+++ b/css/cssOperacaoCurso/style768.css
@@ -67,7 +67,7 @@ hr {
 main {
   width: 100vw;
   min-height: 100vh;
-  padding: 80px 20px 0;
+  padding: 5px 20px 0;
   background: #F7FDFD; /*ou FAFEFE*/
 }
 
@@ -158,7 +158,7 @@ a.buttonNext {
 }
 
 h1{
-  margin-top:20px;
+  margin-top:15px;
   color:#036;
   margin-bottom:15px;
   text-align: center;
@@ -188,20 +188,19 @@ h1{
   border-radius: 12px;
   }
   
-  .setinha{
-    position: fixed;
-    left: 4px;
-    top: -15px;
-    height: 90px;
-    padding: 80px 55px 0;
-  
-  }
-  #seta{
-   text-align: left;
-   width:50px;
-  
    
-  }
+.setinha{
+ 
+  width:40px;
+
+}
+
+#seta{
+margin-left:20px;
+ width:50px;
+  margin-top:75px;
+ }
+
 table{
   width:100%;
   table-layout: fixed;
