--- a/css/cssCadastrosOutros/style1024.css
+++ b/css/cssCadastrosOutros/style1024.css
@@ -246,31 +246,37 @@ a.buttonNext {
     border: 2px solid #B7D6EC;
     margin-bottom: 10px;
 }
+
 #posiciona{
-    width:600px;
-    display: flex;
-    flex-direction:row;
-    align-items: center;
-    justify-content: space-between;
-  padding:10px;
-    
-  }
+  display:flex
+
   
-  .centraliza{
-    width:20px;
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    justify-content: center;
-    padding:5px;
-    margin-left:20px;
+}
+
+.centraliza{
+
+
+}
+.form{
+
+}
+.inputRadio{
   
-  }
+  display: inline-block;
+  max-width:35px;
   
-  .inputRadio{
-    max-width:35px;
-  }
-  label{
-    margin:10px;
-  }
- 
+}
+label{
+  margin:10px;
+}
+#seta{
+  text-align: left;
+  width: 40px;
+}
+
+p.puxar{
+    display:inline-block;
+    margin: 10px;
+    font-size: 26px;
+    width: 200px;
+}
