pesquisa tmb feito
mas qual era o problema tão grande na responsividade????

--- a/css/lista_salas/lista_salas768.css
+++ b/css/lista_salas/lista_salas768.css
@@ -189,3 +189,11 @@ a{
 }
 
 /* ******* FOOTER ******* */
+.aluno {
+    text-align: left;
+    width: 500PX;
+    border-bottom: 2px solid  #B7D6EC;
+    color: #252525;
+    cursor: pointer;
+    border-radius: 15px;
+}
