--- a/css/cssCadastroMaster/style1024.css
+++ b/css/cssCadastroMaster/style1024.css
@@ -180,3 +180,21 @@ a.buttonNext {
     width: 40%;
     margin-top: 5%;
 }
+h1{
+    font-size:1.6em;
+    text-align: center;
+}
+   
+.setinha{
+    
+     width:40px;
+   
+   }
+   
+   #seta{
+   margin-left: -330px;
+    width:50px;
+   
+    }
+
+ 
