--- a/css/cssCadastroMaster/style480.css
+++ b/css/cssCadastroMaster/style480.css
@@ -152,14 +152,33 @@ a.buttonNext {
     right: -50px;
 }
 
+
 .confirma{
     font-weight: 600;
     color: #003366
 }
 
 .endUnid{
-    width: 80%;
-    margin-top: 15%;
+    padding: 10px;
+    width: 90%;
+    margin-top: 10%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.endUnid h4{
+    border-bottom: 2px solid #B7D6EC;
+    border-radius: 15px;
+    margin-left: 3%;
+    width: 90%;
+    text-align: center;
+}
+
+.endUnid p{
+    margin-left: 5%;
+    
 }
 h1{
     font-size:1.6em;
