--- a/css/perfilAluno/style480.css
+++ b/css/perfilAluno/style480.css
@@ -258,6 +258,14 @@ width: 50%;
 
 
 
+.setinha{  
+  display: flex;
+  align-self: flex-start;
+  margin-left: 20px;
+  margin-top: 10px;
+  margin-bottom: -10px;
+  
+}
 
 
 
