--- a/css/cssCadastrosOutros/style1366.css
+++ b/css/cssCadastrosOutros/style1366.css
@@ -9,84 +9,79 @@
   overflow-y: scroll;
 }
 
-.header {
-  background: #fff;
-  width: calc(100vw - 280px);
-  height: 7vh;
-}
+.header { background-color: transparent;
+    width: calc(100% - 280px);
+    height: 7vh;
+  }
 
-.logo {
-  position: relative;
-  left: calc(100vw - 2em - 8px);
-  top: 5px;
-  width: 2em;
-  height: 2em;
-}
+  .logo {
+    position: relative;
+    left: calc(100% - (-15em));
+    top: 5px;
+    width: 2em;
+    height: 2em;
+  }
 
-.header .st0{fill:#fff;}
-.header .st1{fill:#fff;}
-.header .st2{fill:#fff;}
-.header .st3{fill:#fff;}
+  .header .st0{fill:#fff;}
+  .header .st1{fill:#fff;}
+  .header .st2{fill:#fff;}
+  .header .st3{fill:#fff;}
 
-.hamburger{display: none!important;}
+  .hamburger{display: none!important;}
 
-.fullnav {
-  width: 280px;
-  bottom: 0%;
-  top: 0%;
-  right: 0;
-  background: rgba(0,204,204,1);
-  background: linear-gradient(to bottom, rgba(0,204,204,1) 0%, rgba(0,204,204,1) 30%, rgba(0,102,204,1) 100%);
-}
+  .fullnav {
+    width: 280px;
+    bottom: 0%;
+    top: 0%;
+    right: 0;
+    background: rgba(0,204,204,1);
+    background: linear-gradient(to bottom, rgba(0,204,204,1) 0%, rgba(0,204,204,1) 30%, rgba(0,102,204,1) 100%);
+  }
 
-.menu {
-  width: 230px;
-  justify-content: space-around;
-  background: #051523;
-}
+  .menu {
+    width: 230px;
+    justify-content: space-around;
+    background: #051523;
+  }
 
-hr {display: none; border: none;}
+  hr {display: none; border: none;}
 
-.menu-buttons {
-  margin-top: calc(60px + 5vh);
-  flex-grow: 2;
-  align-items: flex-end!important;
-  position: relative;
-  right: -57px
-}
+  .menu-buttons {
+    margin-top: calc(60px + 5vh);
+    flex-grow: 2;
+    align-items: flex-end!important;
+    position: relative;
+    left: 25px;
+    width: 280px;
+  }
 
-.menu-buttons li{padding: 10px; width: 100%}
+  .menu-buttons li{padding: 10px; width: 100%}
 
-.menu-buttons .atual{
-  background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);
-  border-right: solid 5px white;
-  padding-right: 5px;
-}
+  .menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
 
-.menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
 
-.menu-buttons li a{
-  font-size: 1em;
-  display:flex;
-  flex-direction: row-reverse;
-  align-items:center;
-}
+  .menu-buttons li a{
+    font-size: 1em;
+    display:flex;
+    flex-direction: row-reverse;
+    align-items:center;
+  }
 
-.menu-buttons i {
-  font-size: 1.3em;
-  margin-left: 60px
-}
+  .menu-buttons i {
+    font-size: 1.3em;
+    margin-left: 60px
+  }
 
-.title, .subtitle {font-size: 1em;}
+  .title, .subtitle {font-size: 1em;}
 
-.title {font-size: 1em}
+  .title {font-size: 1em}
 
-.profile-photo-menu {
-  width: 120px;
-  height: 120px;
-  border-radius: 60px;
-  margin: calc(30px + 3vh) 0 30px;
-}
+  .profile-photo-menu {
+    width: 120px;
+    height: 120px;
+    border-radius: 60px;
+    margin: calc(30px + 3vh) 0 30px;
+  }
 
 
 *:not(i) {font-family: Roboto!important;}
@@ -154,7 +149,7 @@ body{
 
 .table-remove{
     float: right
-}   
+}
 
 .acessoUm{
     display: flex;
@@ -166,7 +161,7 @@ body{
 }
 .acessoUm p {
     font-size: 20px;
-    
+
     max-width: 500px;
 }
 p.vsf{
@@ -184,8 +179,8 @@ p.vsf{
 .acessoUm form{
     text-align: left;
     padding: 30px;
-    
-    
+
+
 }
 .acessoUm form h2{
     font-size: 30px;
@@ -198,9 +193,9 @@ p.vsf{
     font-size: 20px;
     display: block;
 }
-.acessoUm input{  
+.acessoUm input{
     height: 30px;
-    width: 700px;  
+    width: 700px;
     border:none;
     border-bottom: 2px solid #000;
     border-radius: 5px;
@@ -288,7 +283,7 @@ a.buttonNext {
 #posiciona{
   display:flex
 
-  
+
 }
 
 .centraliza{
@@ -299,10 +294,10 @@ a.buttonNext {
 
 }
 .inputRadio{
-  
+
   display: inline-block;
   max-width:35px;
-  
+
 }
 label{
   margin:10px;
