--- a/css/perfilAluno/style1366.css
+++ b/css/perfilAluno/style1366.css
@@ -1,71 +1,76 @@
-.header {
-  
-  width: calc(100vw - 280px);
-  height: 7vh;
-}
+.header { background-color: transparent;
+    width: calc(100% - 280px);
+    height: 7vh;
+  }
 
-.logo {
-  position: relative;
-  left: calc(100vw - 2em - 8px);
-  top: 5px;
-  width: 2em;
-  height: 2em;
-}
+  .logo {
+    position: relative;
+    left: calc(100% - (-15em));
+    top: 5px;
+    width: 2em;
+    height: 2em;
+  }
 
-.header .st0{fill:#fff;}
-.header .st1{fill:#fff;}
-.header .st2{fill:#fff;}
-.header .st3{fill:#fff;}
+  .header .st0{fill:#fff;}
+  .header .st1{fill:#fff;}
+  .header .st2{fill:#fff;}
+  .header .st3{fill:#fff;}
 
-.hamburger{display: none!important;}
+  .hamburger{display: none!important;}
 
-.fullnav {
-  width: 280px;
-  bottom: 0%;
-  top: 0%;
-  right: 0;
-  background: rgba(0,204,204,1);
-  background: linear-gradient(to bottom, rgba(0,204,204,1) 0%, rgba(0,204,204,1) 30%, rgba(0,102,204,1) 100%);
-}
+  .fullnav {
+    width: 280px;
+    bottom: 0%;
+    top: 0%;
+    right: 0;
+    background: rgba(0,204,204,1);
+    background: linear-gradient(to bottom, rgba(0,204,204,1) 0%, rgba(0,204,204,1) 30%, rgba(0,102,204,1) 100%);
+  }
 
-.menu {
-  width: 230px;
-  justify-content: space-around;
-  background: #051523;
-}
+  .menu {
+    width: 230px;
+    justify-content: space-around;
+    background: #051523;
+  }
 
-hr {display: none; border: none;}
+  hr {display: none; border: none;}
 
-.menu-buttons {
-  margin-top: calc(60px + 5vh);
-  flex-grow: 2;
-  align-items: flex-end!important;
-  position: relative;
-  right: -57px
-}
+  .menu-buttons {
+    margin-top: calc(60px + 5vh);
+    flex-grow: 2;
+    align-items: flex-end!important;
+    position: relative;
+    left: 25px;
+    width: 280px;
+  }
 
-.menu-buttons li a{
-  font-size: 1em;
-  display:flex;
-  flex-direction: row-reverse;
-  align-items:center;
-}
+  .menu-buttons li{padding: 10px; width: 100%}
 
-.menu-buttons i {
-  font-size: 1.3em;
-  margin-left: 60px
-}
+  .menu-buttons li:hover{background: linear-gradient(to right, rgba(246, 246, 246, 0) 0%, rgba(255, 255, 255, 0.596) 100%);}
 
-.title, .subtitle {font-size: 1em;}
 
-.title {font-size: 1em}
+  .menu-buttons li a{
+    font-size: 1em;
+    display:flex;
+    flex-direction: row-reverse;
+    align-items:center;
+  }
 
-.profile-photo-menu {
-  width: 120px;
-  height: 120px;
-  border-radius: 60px;
-  margin: calc(30px + 3vh) 0 30px;
-}
+  .menu-buttons i {
+    font-size: 1.3em;
+    margin-left: 60px
+  }
+
+  .title, .subtitle {font-size: 1em;}
+
+  .title {font-size: 1em}
+
+  .profile-photo-menu {
+    width: 120px;
+    height: 120px;
+    border-radius: 60px;
+    margin: calc(30px + 3vh) 0 30px;
+  }
 
 
 
@@ -78,7 +83,7 @@ main {
   overflow-y: scroll;
   padding: 90px 65px 0;
   background: #F7FDFD; /*ou FAFEFE*/
- 
+
 }
 
 
@@ -296,12 +301,11 @@ width: 50%;
 
 
 
-.setinha{  
+.setinha{
   display: flex;
   align-self: flex-start;
   margin-left: 20px;
   margin-top: 30px;
   margin-bottom: -30px;
-  
-}
 
+}
