dando uma adiantada

--- a/css/lista_alunos_sala/lista_alunos_sala_1024.css
+++ b/css/lista_alunos_sala/lista_alunos_sala_1024.css
@@ -126,6 +126,8 @@
       }
       
       #imgAluno{
+        margin-left: 10px;
+        border-radius: 100%;
         width:95px;
         height: 95px;
       }
