--- a/css/lista_alunos_sala/lista_alunos_sala_1366.css
+++ b/css/lista_alunos_sala/lista_alunos_sala_1366.css
@@ -152,6 +152,8 @@ hr {display: none; border: none;}
       }
   
       #imgAluno{
+        margin-left: 10px;
+        border-radius: 100%;
         width:95px;
         height: 95px;
       }
