--- a/css/lista_alunos_sala/lista_alunos_sala_480.css
+++ b/css/lista_alunos_sala/lista_alunos_sala_480.css
@@ -135,6 +135,8 @@
    
       }
       #imgAluno{
+        margin-left: 10px;
+        border-radius: 100%;
         width:95px;
         height: 95px;
       }
