--- a/css/lista_alunos_sala/lista_alunos_sala_768.css
+++ b/css/lista_alunos_sala/lista_alunos_sala_768.css
@@ -128,6 +128,8 @@
       }
   
       #imgAluno{
+        margin-left: 10px;
+        border-radius: 100%;
         width:95px;
         height: 95px;
       }
