--- a/css/cssCadastrosOutros/style480.css
+++ b/css/cssCadastrosOutros/style480.css
@@ -254,7 +254,7 @@ h1{
   
   
 p.puxar{
-    margin-right: 200px;
+    margin-right: 65%;
     display:inline-block;    
     font-size: 20px;
     
